# disposable-mail-tool

./: Cargo.toml  README.md  providers.txt
.github/workflows/: tests.yaml
src/: cli.rs  db.rs  main.rs
src/mails/: error.rs  guerrillamail.rs  mail_enum.rs  mod.rs
